--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Modulo/RegistrarModulo.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Modulo/RegistrarModulo.cshtml
@@ -5,33 +5,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.ValidationSummary()
     @Html.AntiForgeryToken()
     <fieldset>
         <legend>Registrar modulo</legend>
-         <div class="editor-label">
-            @Html.LabelFor(model => model.Residencia)
-        </div> 
-      <div class="editor-label"> 
-       @Html.DropDownList("residencia",ViewBag.Residencias as List<SelectListItem>, new { @class = "input" })
-        </div>
-        <br /> 
-            
         <div class="editor-label">
-            @Html.LabelFor(model => model.NumeroIP)
+            @Html.LabelFor(model => model.ChaveResidencia)
+        </div>
+        <div class="editor-label">
+            @Html.DropDownListFor(model => model.ChaveResidencia, ViewBag.Residencias as List<SelectListItem>, "Selecione...", new { @class = "input" })
+        </div>
+        <br />
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.IP)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.NumeroIP)
-            @Html.ValidationMessageFor(model => model.NumeroIP)
+            @Html.EditorFor(model => model.IP)
+            @Html.ValidationMessageFor(model => model.IP)
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.NumeroPorta)
+            @Html.LabelFor(model => model.Porta)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.NumeroPorta)
-            @Html.ValidationMessageFor(model => model.NumeroPorta)
+            @Html.EditorFor(model => model.Porta)
+            @Html.ValidationMessageFor(model => model.Porta)
         </div>
 
         <div class="editor-label">
@@ -43,15 +44,15 @@
         </div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.NumeroMac)
+            @Html.LabelFor(model => model.MAC)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.NumeroMac)
-            @Html.ValidationMessageFor(model => model.NumeroMac)
+            @Html.EditorFor(model => model.MAC)
+            @Html.ValidationMessageFor(model => model.MAC)
         </div>
 
         <p>
-            <input type="submit" value="Registrar" class="btn-glow primary login"/>
+            <input type="submit" value="Registrar" class="btn-glow primary login" />
         </p>
     </fieldset>
 }
