--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/RegistrarResidencia.cshtml
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Views/Residencia/RegistrarResidencia.cshtml
@@ -15,6 +15,14 @@
         <legend>Registrar Residência</legend>
 
         <div class="editor-label">
+            @Html.LabelFor(model => model.Nome)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Nome)
+            @Html.ValidationMessageFor(model => model.Nome)
+        </div>
+
+        <div class="editor-label">
             @Html.LabelFor(model => model.Logradouro)
         </div>
         <div class="editor-field">
